[package]
name = "libdcerpc"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "idl-compiler", "idl-compiler-sys", "libdcerpc-sys" ]

[workspace.dependencies]
idl-compiler-sys = { path = "idl-compiler-sys" }
idl-compiler = { path = "idl-compiler" }
system-deps = "6.0.4"
cc = "1.0.79"

[dependencies]
libdcerpc-sys = { path = "libdcerpc-sys" }
byteorder = "1.4.3"
thiserror = "1.0.38"
hex = "0.4.3"
bitflags = "2.0.0"